k8s/qlever/stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qlever
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qlever
  serviceName: qlever
  template:
    metadata:
      labels:
        app: qlever
    spec:
      containers:
        - name: server
          image: ghcr.io/zazukoians/qlever-server
#          resources:
#            requests:
#              memory: 1.5Gi
#            limits:
#              memory: 8Gi
          volumeMounts:
            - mountPath: "/data"
              name: server-data
          ports:
            - containerPort: 7001
#          securityContext:
#            runAsUser: 65534
#          livenessProbe:
#            httpGet:
#              path: /repositories/registry/health?passive
#              port: 7200
#            initialDelaySeconds: 100
#            periodSeconds: 5
#            timeoutSeconds: 60
        - name: ui
          image: ghcr.io/zazukoians/qlever-ui
          volumeMounts:
            - mountPath: "/app/db"
              name: ui-data
          ports:
            - containerPort: 7002
          securityContext:
            runAsUser: 65534

      imagePullSecrets:
        - name: ghcr
  volumeClaimTemplates:
    - metadata:
        name: server-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 200Gi # Changed to 200Gi.
        storageClassName: do-block-storage
    - metadata:
        name: ui-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi # Changed to 200Gi.
        storageClassName: do-block-storage
