k8s/qlever/service-server.yml
apiVersion: v1
kind: Service
metadata:
  name: qlever-server
spec:
  ports:
    - port: 80
      targetPort: 7001
  selector:
    app: qlever
