k8s/qlever/service-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: qlever-ui
spec:
  ports:
    - port: 80
      targetPort: 7002
  selector:
    app: qlever
