k8s/qlever/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qlever
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /qlever/(.*)$
            pathType: ImplementationSpecific
            backend:
              service:
                name: qlever-ui
                port:
                  number: 80
#          - path: /qlever
#            pathType: Prefix
#            backend:
#              service:
#                name: qlever-server
#                port:
#                  number: 80
